// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test base/Nav/SideMenu/index.ce should match snapshot 1`] = `
<div>
  <div
    class="dms-layout-side css-13z0syi"
  >
    <div
      class="dms-layout-side-start"
    >
      <div>
        <div
          class="title"
        >
          <span
            class="label label-primary"
          >
            Action
          </span>
          <span
            class="label label-base"
          >
            SQLE
          </span>
        </div>
      </div>
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
      >
        <div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="ant-spin ant-spin-spinning css-dev-only-do-not-override-txh9fw"
          >
            <span
              class="ant-spin-dot ant-spin-dot-spin"
            >
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
            </span>
          </div>
        </div>
        <div
          class="ant-spin-container ant-spin-blur"
        >
          <div
            class="css-22avtw"
          >
            <div
              class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center action-space-wrapper"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                <div
                  class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                >
                  <div
                    class="ant-space-item"
                  >
                    <div
                      class="action-item global-dashboard"
                    >
                      <svg
                        class="TodoListOutlined_svg__icon"
                        color="currentColor"
                        height="18"
                        viewBox="0 0 1024 1024"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M924 540c-19.9 0-36 16.1-36 36v312H136V136h568c19.9 0 36-16.1 36-36s-16.1-36-36-36H136c-39.8 0-72 32.2-72 72v752c0 39.8 32.2 72 72 72h752c39.8 0 72-32.2 72-72V576c0-19.9-16.1-36-36-36"
                          fill="currentColor"
                        />
                        <path
                          d="M316.5 478.5c-14.1-14.1-36.9-14.1-50.9 0-14.1 14.1-14.1 36.9 0 50.9l178.2 178.2c5.7 5.7 12.8 9.1 20.1 10.2 11.2 1.9 23.1-1.4 31.7-10l454.2-454.2c14.1-14.1 14.1-36.9 0-50.9-14.1-14.1-36.9-14.1-50.9 0l-429.2 429z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-space-item"
              >
                <div
                  class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                >
                  <div
                    class="ant-space-item"
                  >
                    <div
                      class="action-item view-rule"
                    >
                      <svg
                        color="currentColor"
                        height="18"
                        viewBox="0 0 18 19"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M15 17H3a.75.75 0 0 1-.75-.75V2.75A.75.75 0 0 1 3 2h12a.75.75 0 0 1 .75.75v13.5A.75.75 0 0 1 15 17M6 5.75v1.5h6v-1.5zm0 3v1.5h6v-1.5zm0 3v1.5h3.75v-1.5z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-2f3ey2"
      >
        <svg
          class="project-flag-icon"
          height="18"
          viewBox="0 0 18 18"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2.25 2.25h7.037a.75.75 0 0 1 .67.415L10.5 3.75H15a.75.75 0 0 1 .75.75v8.25a.75.75 0 0 1-.75.75h-4.786a.75.75 0 0 1-.671-.415L9 12H3.75v4.5h-1.5z"
            fill="#EBAD1C"
          />
        </svg>
        <span
          class="ant-typography default-project-name css-dev-only-do-not-override-txh9fw"
        >
          default
        </span>
      </div>
      <ul
        class="ant-menu ant-menu-root ant-menu-inline ant-menu-light custom-menu css-dev-only-do-not-override-txh9fw"
        data-menu-list="true"
        role="menu"
        tabindex="0"
      />
      <div
        aria-hidden="true"
        style="display: none;"
      />
    </div>
    <div
      class="dms-layout-side-end"
    >
      <span
        class="ant-avatar ant-avatar-circle action-avatar css-1wq79dc css-dev-only-do-not-override-txh9fw"
      >
        <span
          class="ant-avatar-string"
          style="transform: scale(1) translateX(-50%);"
        >
          A
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`test base/Nav/SideMenu/index.ce should match snapshot 2`] = `
<div>
  <div
    class="dms-layout-side css-13z0syi"
  >
    <div
      class="dms-layout-side-start"
    >
      <div>
        <div
          class="title"
        >
          <span
            class="label label-primary"
          >
            Action
          </span>
          <span
            class="label label-base"
          >
            SQLE
          </span>
        </div>
      </div>
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="css-22avtw"
          >
            <div
              class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center action-space-wrapper"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                <div
                  class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                >
                  <div
                    class="ant-space-item"
                  >
                    <div
                      class="action-item global-dashboard"
                    >
                      <svg
                        class="TodoListOutlined_svg__icon"
                        color="currentColor"
                        height="18"
                        viewBox="0 0 1024 1024"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M924 540c-19.9 0-36 16.1-36 36v312H136V136h568c19.9 0 36-16.1 36-36s-16.1-36-36-36H136c-39.8 0-72 32.2-72 72v752c0 39.8 32.2 72 72 72h752c39.8 0 72-32.2 72-72V576c0-19.9-16.1-36-36-36"
                          fill="currentColor"
                        />
                        <path
                          d="M316.5 478.5c-14.1-14.1-36.9-14.1-50.9 0-14.1 14.1-14.1 36.9 0 50.9l178.2 178.2c5.7 5.7 12.8 9.1 20.1 10.2 11.2 1.9 23.1-1.4 31.7-10l454.2-454.2c14.1-14.1 14.1-36.9 0-50.9-14.1-14.1-36.9-14.1-50.9 0l-429.2 429z"
                          fill="currentColor"
                        />
                      </svg>
                      <svg
                        class="action-item-dot"
                        fill="none"
                        height="16"
                        viewBox="0 0 14 12"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <circle
                          cx="6"
                          cy="6"
                          fill="#F66074"
                          r="2.5"
                        />
                        <circle
                          cx="6"
                          cy="6"
                          r="4"
                          stroke="#F66074"
                          stroke-opacity="0.2"
                          stroke-width="3"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-space-item"
              >
                <div
                  class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                >
                  <div
                    class="ant-space-item"
                  >
                    <div
                      class="action-item view-rule"
                    >
                      <svg
                        color="currentColor"
                        height="18"
                        viewBox="0 0 18 19"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M15 17H3a.75.75 0 0 1-.75-.75V2.75A.75.75 0 0 1 3 2h12a.75.75 0 0 1 .75.75v13.5A.75.75 0 0 1 15 17M6 5.75v1.5h6v-1.5zm0 3v1.5h6v-1.5zm0 3v1.5h3.75v-1.5z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-2f3ey2"
      >
        <svg
          class="project-flag-icon"
          height="18"
          viewBox="0 0 18 18"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2.25 2.25h7.037a.75.75 0 0 1 .67.415L10.5 3.75H15a.75.75 0 0 1 .75.75v8.25a.75.75 0 0 1-.75.75h-4.786a.75.75 0 0 1-.671-.415L9 12H3.75v4.5h-1.5z"
            fill="#EBAD1C"
          />
        </svg>
        <span
          class="ant-typography default-project-name css-dev-only-do-not-override-txh9fw"
        >
          default
        </span>
      </div>
      <ul
        class="ant-menu ant-menu-root ant-menu-inline ant-menu-light custom-menu css-dev-only-do-not-override-txh9fw"
        data-menu-list="true"
        role="menu"
        tabindex="0"
      />
      <div
        aria-hidden="true"
        style="display: none;"
      />
    </div>
    <div
      class="dms-layout-side-end"
    >
      <span
        class="ant-avatar ant-avatar-circle action-avatar css-1wq79dc css-dev-only-do-not-override-txh9fw"
      >
        <span
          class="ant-avatar-string"
          style="transform: scale(1) translateX(-50%);"
        >
          A
        </span>
      </span>
    </div>
  </div>
</div>
`;
